# redchain

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  cli.py  config.py  docker-compose.yml  models.py  pyproject.toml  redchain_cli.py  requirements.txt  scope.json  setup.py  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: __init__.py  credential_agent.py  cve_agent.py  nuclei_agent.py  osint_agent.py  report_agent.py  scanner_agent.py  subdomain_agent.py  takeover_agent.py  threat_intel.py  webapp_agent.py
i18n/: __init__.py
llm/: __init__.py  gemini_adapter.py  ollama_adapter.py  openai_adapter.py
orchestrator/: __init__.py  graph.py
plugins/: __init__.py  loader.py
report/: __init__.py  generator.py
reports/: .gitkeep  example.com_osint_raw.json  example.com_subhostup.txt  netflix.com_osint_raw.json  netflix.com_subdomains.txt  netflix.com_subhostup.txt  scanme.nmap.org_osint_raw.json
tests/: __init__.py  test_agents.py  test_cli.py  test_cross_platform.py  test_models.py  test_utils.py
tools/: __init__.py  dns_lookup.py  nmap_wrapper.py  nvd_lookup.py  whois_lookup.py
